add_library(openal INTERFACE)
target_include_directories(openal INTERFACE .)
find_package(OpenAL)
target_compile_definitions(openal INTERFACE USE_OPENAL)
if (OPENAL_FOUND)
	if (USE_OPENAL_DLOPEN)
		target_compile_definitions(openal INTERFACE ALDRIVER_DEFAULT="${OPENAL_LIBRARY}")
		target_compile_definitions(openal INTERFACE USE_CURL_DLOPEN)
	else()
		set(LIBS ${OPENAL_LIBRARY})
	endif()
	set(INCLUDE_DIRS ${OPENAL_INCLUDE_DIR})
else()
	set(INCLUDE_DIRS .)
endif()

if (LIBS)
	target_link_libraries(openal INTERFACE ${LIBS})
endif()
target_include_directories(openal INTERFACE ${INCLUDE_DIRS})
