add_library(openal INTERFACE)
target_compile_definitions(openal INTERFACE USE_OPENAL)
if (USE_OPENAL_DLOPEN)
	target_compile_definitions(openal INTERFACE USE_OPENAL_DLOPEN)
endif()

find_package(OpenAL)
if (OPENAL_FOUND)
	if (USE_OPENAL_DLOPEN)
		target_compile_definitions(openal INTERFACE ALDRIVER_DEFAULT="${OPENAL_LIBRARY}")
	else()
		set(LIBS ${OPENAL_LIBRARY})
	endif()
	set(INCLUDE_DIRS ${OPENAL_INCLUDE_DIR})
else()
	set(INCLUDE_DIRS .. .)
endif()

if (LIBS)
	target_link_libraries(openal INTERFACE ${LIBS})
endif()
target_include_directories(openal INTERFACE ${INCLUDE_DIRS})
if (WIN32)
	install(FILES ${LIBS_DIR}/libs/win64/OpenAL32.dll DESTINATION "${ENGINE_BINARY_DIR}" COMPONENT wop)
	configure_file(${LIBS_DIR}/libs/win64/OpenAL32.dll ${ROOT_DIR}/${ENGINE_BINARY_DIR}/OpenAL32.dll COPYONLY)
endif()
