if (MSVC)
	set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE STRING "")
	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
		set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win64/SDL2.lib ${LIBS_DIR}/libs/win64/SDL2main.lib CACHE STRING "")
		set(SDL2_SHARED_OBJECT ${LIBS_DIR}/libs/win64/SDL2.dll CACHE STRING "")
	else()
		set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win32/SDL2.lib ${LIBS_DIR}/libs/win32/SDL2main.lib CACHE STRING "")
		set(SDL2_SHARED_OBJECT ${LIBS_DIR}/libs/win32/SDL2.dll CACHE STRING "")
	endif()
	install(FILES ${SDL2_SHARED_OBJECT} DESTINATION "${ENGINE_BINARY_DIR}" COMPONENT wop)
	get_filename_component(SDL2_SHARED_OBJECT_NAME ${SDL2_SHARED_OBJECT} NAME)
	configure_file(${SDL2_SHARED_OBJECT} ${ROOT_DIR}/${ENGINE_BINARY_DIR}/${SDL2_SHARED_OBJECT_NAME} COPYONLY)
elseif (MINGW)
	set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE STRING "")
	if (CMAKE_SIZEOF_VOID_P EQUAL 8)
		set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win64/libSDL2.dll.a ${LIBS_DIR}/libs/win64/libSDL2main.a CACHE STRING "")
		set(SDL2_SHARED_OBJECT ${LIBS_DIR}/libs/win64/SDL2.dll CACHE STRING "")
	else()
		set(SDL2_LIBRARIES ${LIBS_DIR}/libs/win32/libSDL2.dll.a ${LIBS_DIR}/libs/win32/libSDL2main.a CACHE STRING "")
		set(SDL2_SHARED_OBJECT ${LIBS_DIR}/libs/win32/SDL2.dll CACHE STRING "")
	endif()
	install(FILES ${SDL2_SHARED_OBJECT} DESTINATION "${ENGINE_BINARY_DIR}" COMPONENT wop)
	get_filename_component(SDL2_SHARED_OBJECT_NAME ${SDL2_SHARED_OBJECT} NAME)
	configure_file(${SDL2_SHARED_OBJECT} ${ROOT_DIR}/${ENGINE_BINARY_DIR}/${SDL2_SHARED_OBJECT_NAME} COPYONLY)
elseif (APPLE)
	set(SDL2_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE STRING "")
	set(SDL2_LIBRARIES ${LIBS_DIR}/libs/macosx/libSDL2-2.0.0.dylib ${LIBS_DIR}/libs/macosx/libSDL2main.a CACHE STRING "")
else()
	find_package(PkgConfig REQUIRED)
	pkg_check_modules(SDL2 REQUIRED sdl2)
endif()
